--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "next": "10.0.7",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
