--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "commitlint": "^17.2.0",
@@ -23,13 +24,20 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.4",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.2.6",
-    "tailwindcss": "^2.0.3",
-    "husky": "^8.0.2"
+    "tailwindcss": "^2.0.3"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged":{
+    "**/*.{js,jsx,ts,tsx}":[
+      "npx prettier --write",
+      "npx eslint --fix"
+    ]
   }
 }
