--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
       "pre-commit": "lint-staged"
     }
   },
-  "lint-staged": {
-    "*.js": [
-      "./node_modules/.bin/eslint — fix"
+  "lint-staged":{
+    "**/*.{js,jsx,ts,tsx}":[
+      "npx prettier --write",
+      "npx eslint --fix"
     ]
   }
 }
