--- a/package.json
+++ b/package.json
@@ -34,10 +34,8 @@
       "pre-commit": "lint-staged"
     }
   },
-  "lint-staged":{
-    "**/*.{js,jsx,ts,tsx}":[
-      "npx prettier --write",
-      "npx eslint --fix"
-    ]
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "src/**/*.{js,jsx,ts,tsx,css,scss,md}": "prettier --write --ignore-unknown"
   }
 }
