--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": "eslint --cache --fix",
-    "src/**/*.{js,jsx,ts,tsx,css,scss,md}": "prettier --write --ignore-unknown"
+    "*.{js,jsx,ts,html}": "eslint --cache --fix"
   }
 }
