WIP, husky tests

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,html}": "eslint --cache --fix"
+    "src/**/*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "src/**/*.{js,jsx,ts,tsx,css,scss,md}": "prettier --write --ignore-unknown"
   }
 }
