--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,5 @@
 {
-  "**/*.+(js|md)": [
-    "prettier --write",
-    "eslint --fix src/",
-    "git add"
-  ]
-}
+    "*.js": "eslint --cache --fix",
+    "*.css": "stylelint --fix",
+    "*.{js,css,md}": "prettier --write"
+  }
