--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,5 @@
 {
-    "*.js": "eslint --cache --fix",
+    "*.js": "eslint --cache --fix, prettier --write",
     "*.css": "stylelint --fix",
     "*.{js,jsx,css}": "prettier --write"
 }
