--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,8 @@
 {
-    "*.js": "eslint --cache --fix, prettier --write",
-    "*.css": "stylelint --fix",
-    "*.{js,jsx,css}": "prettier --write"
+  "*.+(js|jsx)":[
+    "eslint"
+  ],
+  "*.+(js|json|md)":[
+    "prettier --write"
+  ]
 }
